--- a/mystyle.css
+++ b/mystyle.css
@@ -11,6 +11,13 @@ body{
     margin:auto;
     overflow:hidden;
 }
+.dark{
+    padding:15px;
+    background:#25424a;
+    color:#ffffff;
+    margin-top:10px;
+    margin-bottom:10px;
+}
 /* Header **/
 header{
     background:#35424a;
@@ -80,4 +87,25 @@ a:hover{
 article#main-col{
     float:left;
     width:65%;
+}
+
+
+
+/* Media */
+@media(max-width: 768px){
+    header #branding,
+        header nav,
+        header nav li{
+        float:none;
+        text-align:center;
+        width:100%;
+    }
+    
+    header{
+        padding-bottom:20px;
+        }
+        
+    }
+h1{ 
+     margin-top:40px;
 }
