--- a/mystyle.css
+++ b/mystyle.css
@@ -28,7 +28,7 @@ header{
 }
 header a{
     color:white;
-    text-decoration: none;
+    text-decoration:underline;
     text-transform: uppercase;
     font-size:16px;
 }
@@ -54,7 +54,7 @@ header a: hover{
 
 #showcase{
     min-height: 400px;
-    background:url('../img')
+    background:url('/img/chef.jpg') no-repeat
 }
 #boxes .box {
     float:left;
@@ -79,7 +79,7 @@ a:visitedlink{
     color:purple;
 }
 a:hover{
-    color:purple;
+    color:orange;
 }
 
 
