--- a/mystyle.css
+++ b/mystyle.css
@@ -3,7 +3,7 @@ body{
     line-height:1.5;
     padding: 0;
     margin:0;
-    background-color:#f4f4f4;
+    background-color:#083e75;
 }
 /* Global */
 .container{
@@ -54,7 +54,7 @@ header a: hover{
 
 #showcase{
     min-height: 400px;
-    background:url('/img/chef.jpg') no-repeat
+    background:url('chef.jpg') no-repeat; 
 }
 #boxes .box {
     float:left;
