--- a/mystyle.css
+++ b/mystyle.css
@@ -56,6 +56,13 @@ header a: hover{
     min-height: 400px;
     background:url('chef.jpg') no-repeat; 
 }
+
+#showcase h1{
+ margin-top:100px;
+ font-size:55px;
+ margin-bottom:10px;
+
+}
 #boxes .box {
     float:left;
     text-align: center;
@@ -67,7 +74,7 @@ footer{
     padding:20px;
     margin-top:20px;
     color: #ffffff;
-    background-color:#e8491d;
+    background-color:#ffffff;
     text-align: center;
     
 }
