--- a/mystyle.css
+++ b/mystyle.css
@@ -69,7 +69,11 @@ header a: hover{
     width: 30%;
     padding:10px;
 }
-
+#boxes .box2 {
+float:right;
+text-align: center;
+width:40%;
+}
 footer{
     padding:20px;
     margin-top:20px;
