--- a/mystyle.css
+++ b/mystyle.css
@@ -78,7 +78,7 @@ footer{
     padding:20px;
     margin-top:20px;
     color: #ffffff;
-    background-color:#ffffff;
+    background-color:#005959;
     text-align: center;
     
 }
