--- a/mystyle.css
+++ b/mystyle.css
@@ -80,6 +80,7 @@ footer{
     color: #ffffff;
     background-color:#005959;
     text-align: center;
+    position: absolute; bottom: 5px;
     
 }
 a:link{
