--- a/mystyle.css
+++ b/mystyle.css
@@ -64,12 +64,13 @@ header a: hover{
  margin-bottom:10px;
 
 }
+/* boxes*/
 #boxes{
 margin-top: 20px
 }
 #boxes .box {
-    float:right;
-    text-align: center;
+    float:left;
+    text-align:center;
     width:30%;
     padding:10px;
 }
